--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fluxmon-ser
+  name: dumsumoh-ser
 spec:
   type: NodePort
   selector:
-    app: fluxmon
+    app: dumsumoh
   ports:
     - protocol: TCP
       port: 8050
