--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dumsumoh-ser
+  name: fluxmon-Service
 spec:
   type: NodePort
   selector:
-    app: dumsumoh
+    app: fluxmon
   ports:
     - protocol: TCP
       port: 8050
